boot: support reading boot count from loader file name

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,15 @@ AUTOMAKE_OPTIONS = color-tests parallel-tests
 GCC_COLORS ?= 'ooh, shiny!'
 export GCC_COLORS
 
+EFI_V_CC = $(efi__v_CC_$(V))
+efi__v_CC_ = $(efi__v_CC_$(AM_DEFAULT_VERBOSITY))
+efi__v_CC_0 = @echo "  EFICC   " $@;
+efi__v_CC_1 = 
+EFI_V_CCLD = $(efi__v_CCLD_$(V))
+efi__v_CCLD_ = $(efi__v_CCLD_$(AM_DEFAULT_VERBOSITY))
+efi__v_CCLD_0 = @echo "  EFICCLD " $@;
+efi__v_CCLD_1 = 
+
 bootlibdir = $(prefix)/lib/bus1/boot-efi
 
 # ------------------------------------------------------------------------------
@@ -92,17 +101,17 @@ bootlib_DATA = $(boot)
 CLEANFILES = $(boot_objects) $(boot_solib) $(boot)
 
 $(top_builddir)/src/%.o: $(top_srcdir)/src/%.c $(addprefix $(top_srcdir)/,$(boot_headers))
-	@$(MKDIR_P) $(top_builddir)/src/
-	$(AM_V_CC)$(EFI_CC) -I$(top_srcdir)/src/boot $(efi_cppflags) $(efi_cflags) -c $< -o $@
+	$(AM_V_at)$(MKDIR_P) $(top_builddir)/src/
+	$(EFI_V_CC)$(EFI_CC) -I$(top_srcdir)/src/boot $(efi_cppflags) $(efi_cflags) -c $< -o $@
 
 $(boot_solib): $(boot_objects)
-	$(AM_V_CCLD)$(LD) $(efi_ldflags) $(boot_objects) \
-		-o $@ -lefi -lgnuefi $(shell $(CC) -print-libgcc-file-name); \
-	nm -D -u $@ | grep ' U ' && exit 1 || :
+	$(EFI_V_CCLD)$(LD) $(efi_ldflags) $(boot_objects) \
+		-o $@ -lefi -lgnuefi $(shell $(EFI_CC) -print-libgcc-file-name); \
+		$(NM) -D -u $@ | grep ' U ' && exit 1 || :
 
 $(boot): $(boot_solib)
 	$(AM_V_GEN)$(OBJCOPY) -j .text -j .sdata -j .data -j .dynamic \
-	  -j .dynsym -j .rel -j .rela -j .reloc $(EFI_FORMAT) $< $@
+		-j .dynsym -j .rel -j .rela -j .reloc $(EFI_FORMAT) $< $@
 
 # ------------------------------------------------------------------------------
 stub_headers = \
@@ -135,17 +144,17 @@ bootlib_DATA += $(stub)
 CLEANFILES += $(stub_objects) $(stub_solib) $(stub)
 
 $(top_builddir)/src/%.o: $(top_srcdir)/src/%.c $(addprefix $(top_srcdir)/,$(stub_headers))
-	@$(MKDIR_P) $(top_builddir)/src
-	$(AM_V_CC)$(EFI_CC) -I$(top_srcdir)/src/stub $(efi_cppflags) $(efi_cflags) -c $< -o $@
+	$(AM_V_at)$(MKDIR_P) $(top_builddir)/src
+	$(EFI_V_CC)$(EFI_CC) -I$(top_srcdir)/src/stub $(efi_cppflags) $(efi_cflags) -c $< -o $@
 
 $(stub_solib): $(stub_objects)
-	$(AM_V_CCLD)$(LD) $(efi_ldflags) $(stub_objects) \
-		-o $@ -lefi -lgnuefi $(shell $(CC) -print-libgcc-file-name); \
-	nm -D -u $@ | grep ' U ' && exit 1 || :
+	$(EFI_V_CCLD)$(LD) $(efi_ldflags) $(stub_objects) \
+		-o $@ -lefi -lgnuefi $(shell $(EFI_CC) -print-libgcc-file-name); \
+		$(NM) -D -u $@ | grep ' U ' && exit 1 || :
 
 $(stub): $(stub_solib)
 	$(AM_V_GEN)$(OBJCOPY) -j .text -j .sdata -j .data -j .dynamic \
-	  -j .dynsym -j .rel -j .rela -j .reloc $(EFI_FORMAT) $< $@
+		-j .dynsym -j .rel -j .rela -j .reloc $(EFI_FORMAT) $< $@
 
 # ------------------------------------------------------------------------------
 CLEANFILES += efi-disk.img
