build-sys: update from skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -2,29 +2,26 @@
 *.la
 *.lo
 *.log
+*.m4
 *.o
 *.stamp
 *.swp
+*.tar.xz
 *.trs
 *~
-.deps/
-.dirstamp
-.libs/
-Makefile
-Makefile.in
-/*.tar.xz
-/autom4te.cache/
+
 /aclocal.m4
-/build-aux/
-/m4/
-/config.h
-/config.h.in
+/build/
 /config.log
 /config.status
 /configure
-/stamp-*
+.deps/
+.dirstamp
+/Makefile
+/Makefile.in
+
 /boot.so
-/stub.so
 /bootx64.efi
-/stubx64.efi
 /efi-disk.img
+/stub.so
+/stubx64.efi
